--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -14,30 +14,46 @@ body {
 }
 
 footer {
-  padding: 10px 0;
+  background: #fff;
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  background: #000;
 }
 
 .wrapper {
   margin: auto;
-  padding: 20px;
+  padding: 60px 0 0;
+  background: #f1f4f7;
+  position: relative;
 }
 
 .container {
-  padding: 20px;
+  padding: 20px 50px;
+  margin-bottom: 220px;
 }
 
-.content {
-  background: $white;
-  min-height: 350px;
-  padding: 30px;
+.map-filters{
+  background: #fff;
+  padding: 25px;
 }
 
 .map-content {
   position: relative;
   height: 800px;
+}
+
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
 }
 
 .clear{
